--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ var throttledKick = throttle(kick, 4 * interval);
 </script>
 
 </head>
-<body onkeypress="throttledKick()">
+<body onkeypress="throttledKick()" onclick="throttledKick()">
 
 
 <img class="background" src="background.png" width="1" height="1">
